<resources>
    <string name="app_name">Calculator</string>
    <string name="output_window"></string>
    <string name="additional_output_window"></string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_ln">ln</string>
    <string name="button_π">π</string>
    <string name="button_C">C</string>
    <string name="button_delete">←</string>
    <string name="button_sqrt">√</string>
    <string name="button_brakets">()</string>
    <string name="button_pow2">x^2</string>
    <string name="button_powy">x^y</string>
    <string name="button_mod">%</string>
    <string name="button_div">/</string>
    <string name="button_mul">*</string>
    <string name="button_sub">-</string>
    <string name="button_add">+</string>
    <string name="button_calc">=</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_0">0</string>
    <string name="button_е">е</string>
    <string name="button_.">.</string>
    <string name="item1">Settings</string>
    <string name="item2">Help</string>
    <string name="item3">Programmable Buttons</string>
    <string name="programmable_buttons">My button</string>
    <string name="newbut">Add...</string>
    <string name="tab1">
        Tip #1
    </string>
    <string name="tab2">
        Tip #2
    </string>
    <string name="tab3">
        Tip #3
    </string>s

</resources>
