<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outsideLinearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/outsideLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="289dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_output_view">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_C" />

            <Button
                android:id="@+id/buttonsin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_sin" />

            <Button
                android:id="@+id/buttoncos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_cos" />

            <Button
                android:id="@+id/buttontan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_tan" />

            <Button
                android:id="@+id/buttonln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_ln" />

            <Button
                android:id="@+id/buttonπ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_π" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttondelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_delete" />

            <Button
                android:id="@+id/buttonsqrt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_sqrt" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_7" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_4" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_1" />

            <Button
                android:id="@+id/buttonе"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_е" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonbrakets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_brakets" />

            <Button
                android:id="@+id/buttonpow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_pow2" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_8" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_5" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_2" />

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_0" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonmod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_mod" />

            <Button
                android:id="@+id/buttonpowy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_powy" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_9" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_6" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/button."
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_." />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttondiv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_div" />

            <Button
                android:id="@+id/buttonmul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_mul" />

            <Button
                android:id="@+id/buttonsub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_sub" />

            <Button
                android:id="@+id/buttonadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_add" />

            <Button
                android:id="@+id/buttoncalc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/numberic_fonts"
                android:text="@string/button_calc" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/additional_output_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/numberic_fonts"
        android:gravity="end"
        android:text="5 - 5"
        android:textColor="@android:color/darker_gray"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_output_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/numberic_fonts"
        android:gravity="end"
        android:text="@string/output_window"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additional_output_view" />
</android.support.constraint.ConstraintLayout>